--- a/package.json
+++ b/package.json
@@ -7,11 +7,17 @@
   "private": false,
   "type": "module",
   "license": "MIT",
+  "author": "zhanxin",
   "keywords": [
     "Component",
     "UI",
     "Vue3"
   ],
+  "homepage": "https://github.com/luozhanxin/monk-components.git",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/luozhanxin/monk-components.git"
+  },
   "scripts": {
     "clean": "rimraf ./dist",
     "build": "npm run clean && npm run build:esm && npm run build:umd",
@@ -21,6 +27,9 @@
     "type-check": "vue-tsc --noEmit -p tsconfig.vitest.json --composite false",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore"
   },
+  "files": [
+    "dist"
+  ],
   "dependencies": {
     "lodash-es": "^4.17.21"
   },
